# ayala

./: README.md  pyproject.toml
.github/workflows/: ayala_manually.yml  ayala_schedule.yml  datapane_report.yml  datapane_report_manually.yml  dp_report_w_manual.yml  dp_report_weekly.yml  followers_count.yml  followers_count_manually.yml  main.yml  report_datapane.yml  run_search_tweets.yml
docs/: README.md
src/: Makefile  database_connection.py  datapane_report.py  datapane_report_weekly.py  followers_count.py  requirements_install.py  running_twitter_qyery.ipynb  scraper_tweets_tool.py  stopwords-pt.txt  telegram_bot.py  testiing_twitter_tool.py  tweets_search.py  utils.py
